# utils-common-enough

./: .editorconfig  .env.example  .flake8  .gitignore  .setup_config.json  CLAUDE-CONFIG-ANALYSIS.md  CLAUDE-SETTINGS-ANALYSIS.md  CLAUDE-SETTINGS-COMPREHENSIVE-GUIDE.md  CLAUDE-SETTINGS-IMPLEMENTATION-GUIDE.md  CLAUDE-SETTINGS-SECURITY-ANALYSIS.md  CLAUDE.md  MIGRATION.md  NAMING-CONVENTION-CHANGES.md  README.md  UNIFIED_MODE_REMOVAL.md  coverage.json  coverage_summary.py  pyproject.toml  pyproject.toml.backup-20250711-160213  requirements.txt  run_unified_tests.py  setup-git-submodules.sh  setup.py  setup_wizard.py  test_fixes_summary.md
PROMPTS/: 20250711-1230-fix-python-code-quality.md  20250711-1231-fix-test-coverage.md  20250711-1232-convert-shell-scripts.md  20250711-1233-standardize-configuration.md
cicd-runs/: README.md  act-fix-once.sh  local-cicd-auto-fix.sh
claude-settings-backup/: backup-timestamp.txt  media-register-settings.local.json.backup
claude-settings-improved/: README.md  deploy-improved-settings.sh  fraud-or-not-settings-hybrid.local.json  fraud-or-not-settings.local.json  github-build-logs-settings-hybrid.local.json  github-build-logs-settings.local.json  media-register-settings-hybrid.local.json  media-register-settings.local.json  people-cards-settings-hybrid.local.json  people-cards-settings.local.json  rollback-settings.sh
config/: README.md  base.yaml  fraud-or-not.yaml  media-register.yaml  people-cards.yaml
config/environments/: dev.yaml  prod.yaml  staging.yaml
docs/: 3-letter-naming-convention.md  CENTRALIZED_IAM_GUIDE.md  PEOPLE_CARDS_MIGRATION.md  UNIFIED_PERMISSIONS.md  dynamodb-local.md  iam_permissions_analysis.md  setup-git-submodules.md
docs/architecture/: deployment-patterns.md  infrastructure-diagram.md  overview.md
examples/: naming_convention_example.py
github-build-logs/: github-actions-output-claude-auto-fix.sh
scripts/: add-all-put-tagging-permissions.py  add-cloudfront-permission.py  add-dynamodb-backup-permission.py  add-full-tagging-permissions.py  add-logs-create-permission.py  add-logs-tag-permission.py  add-s3-encryption-permission.py  add-s3-lifecycle-permission.py  add-s3-list-buckets-permission.py  add-s3-tagging-permission.py  apply_unified_permissions.py  cleanup-api-gateway.py  create-lambda-bucket-v2.py  fix-lambda-bucket-region.py  fix-s3-tagging-permission.py  get-latest-lambda-bucket-simple.py  get-latest-lambda-bucket.py  migrate-to-3letter-naming.py  remove-old-submodule-scripts.sh  test-s3-permissions.py  verify-tagging-permissions.py
src/: __init__.py  config.py  naming.py
src/cli/: __init__.py  __main__.py  cloudformation.py  database.py  deploy.py  deploy_media_register.py  dynamodb.py  git.py  iam.py  lambda.py  lambda_cmd.py  media_register_validate.py  media_register_version.py  setup.py  test.py
src/cloudformation/: __init__.py  diagnostics.py  stack_manager.py
src/config/: __init__.py  config_manager.py  validator.py
src/config_validation/: __init__.py  config_manager.py  media_register_validate.py  validate_config.py  validator.py
src/constructs/: __init__.py  compute.py  distribution.py  network.py  storage.py
src/cost/: README.md  __init__.py  analyzer.py  check_costs.py  estimate_costs_simple.py  estimator.py  monitor.py  reporter.py
src/database/: __init__.py  seeder.py
src/deployment/: __init__.py  base_deployer.py  bucket_rotation.py  deploy_init.py  deploy_stack.py  fraud_or_not_deployer.py  frontend_deployer.py  infrastructure.py  media_register_config.py  simple_deploy.py  validate_deployment.py  validation.py
src/examples/: deploy_media_register_complete.py
src/iam/: __init__.py  cicd_manager.py  media_register_policy.py  policies.py  unified_permissions.py
src/lambda/: packager.py
src/lambda_utils/: __init__.py  builder.py  nodejs_builder.py  packager.py  typescript_compiler.py
src/patterns/: __init__.py  cloudfront_lambda_app.py  full_stack_app.py  serverless_api.py  serverless_app.py  static_website.py
src/project_utils/: validate_config.py
src/project_utils.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/project_utils/cli/: setup.py
src/project_utils/deployment/: validation.py
src/scripts/: README_unified_permissions.md  __init__.py  aws_security_audit.py  build_lambdas.py  create_centralized_roles.py  deploy_claude_settings.py  deploy_infrastructure.py  get_cognito_config.py  git_submodules.py  rollback_claude_settings.py  setup_git_submodules.py  unified_user_permissions.py  update_iam_permissions.py
src/security/: __init__.py  audit.py  aws_security.py  compliance.py
src/templates/: iam_policies.yaml
src/testing/: __init__.py  infrastructure_test.py  smoke_tests.py
templates/github-workflows/: README.md  canary-deployment-template.yml  ci-cd-template.yml  deploy-blue-green-template.yml  deploy-template.yml  example-usage.yml  pr-checks-template.yml  scheduled-template.yml
tests/: README_unified_tests.md  __init__.py  test_cloudformation_diagnostics.py  test_config.py  test_config_validation_validator.py  test_constructs_compute.py  test_constructs_distribution.py  test_constructs_network.py  test_constructs_storage.py  test_cost.py  test_cost_check_costs.py  test_cost_estimate_costs_simple.py  test_database.py  test_deployment.py  test_deployment_base_deployer.py  test_iam.py  test_iam_policies.py  test_iam_unified_permissions.py  test_lambda_packager.py  test_lambda_utils.py  test_lambda_utils_packager.py  test_naming.py  test_patterns_full_stack_app.py  test_patterns_serverless_api.py  test_scripts_deploy_claude_settings.py  test_scripts_unified_user_permissions.py  test_security.py  test_stack_manager.py  test_unified_cli.py  test_unified_permissions.py  test_unified_permissions_integration.py
